[package]
name = "smite_api_library"
version = "0.1.0"
authors = ["Jackson Ludwig <jacksonludwig0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.7", features = ["blocking"] }
serde_json = "1.0.57"
chrono = "*"
md5 = "*"
